add vim movement keys to change panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,9 @@
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
+
+# pand movement shortcuts
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
