--- a/tmux.conf
+++ b/tmux.conf
@@ -7,3 +7,7 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+set -g prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
