--- a/tmux.conf
+++ b/tmux.conf
@@ -11,3 +11,14 @@ bind l select-pane -R
 set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
+
+set -g @continuum-restore 'on'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
