--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+set -g mouse on
+
 set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
